# chess_piece_detector

./: README.md
fenify/: pyproject.toml  train.py
fenify/helpers/: image.py  utils.py  visualize.py
fenify/models/: base.py  basic.py  cnn.py
fenify/prepare/: baord_distortion.py  config.py  generate.py  piece_distortion.py  sample.py
