[tool.poetry]
name = "fenify"
version = "0.1.0"
description = "Convert an approximate chess board to fen"
authors = ["Omar Elawady <omarelawady1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
